03_Servicing_Networking/solutions/task5-multi-port-service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-port-server
  labels:
    app: multi-port
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
      name: http
    - containerPort: 443
      name: https
---
apiVersion: v1
kind: Service
metadata:
  name: multi-port-service
spec:
  selector:
    app: multi-port
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
